cleared first-section, benefits and dishlist, added responsive wrapper, fixed margin collapsing in first-section (section-bg)

--- a/frontend/styles/sections.sass
+++ b/frontend/styles/sections.sass
@@ -15,10 +15,11 @@
     
 .first-section
     position: relative
+    padding: 150px 0px
     font-size: 14px
     
     .description
-        margin: 150px auto
+        margin: 0 auto
         max-width: 500px
         // border: 1px solid blue
 
@@ -127,50 +128,59 @@
 
 
 
-.menu
-    padding: 100px 0px
+.section-menu
     background-color: white
-    &-container
-        // padding: 0px 30px
-        width: 100%
-        margin: 0 auto
-        // position: relative
+
+    .menu
         display: flex
         flex-direction: column
-        h3
-            margin: 0px 0px 20px
-            text-align: center
-        .wheat
-            margin: 0px auto 75px 
-        .prices
-            margin: 0px 0px 60px
+        margin: 100px auto
+        // border: 1px solid blue
+
+        .menu-header
+            // border: 1px solid red
+            
+
+            &__title
+                
+                margin: 0px 0px 20px    
+                text-align: center
+
+            .wheat
+                display: block
+                // border: 1px solid green
+                margin: 0px auto 75px 
+
+        .dishes-list
             display: grid
             grid-template-columns: 1fr 1fr 1fr
             grid-template-rows: 1fr 1fr 1fr
             grid-column-gap: 60px
             grid-row-gap: 60px
+            margin: 0px 0px 60px
             
-            &__elem
+            .dish
                 position: relative
-                h4
+
+                &__name
                     margin: 0px 0px 16px
-                p
+
+                &__description
                     font-size: 11.2px
                     color: $text-ingridients-color
+
                 hr
-                    // border-top: 1px solid $hr-borders-color
                     background: $hr-borders-color
                     border: 0
                     height: 1px
                     margin: 0px 0px 16px
-                .money
+
+                &__cost
                     position: absolute
                     top: 0
                     right: 0
                     font-size: 35px
                     color: $money-btn-color
-
-        
 
             @media screen and (max-width: 1229px)
                 max-width: 960px 
@@ -178,26 +188,11 @@
                 grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr
                 grid-column-gap: 0
                 grid-row-gap: 50px
-
-        @media screen and (min-width: 1230px)
-            max-width: 1100px
-        
-        @media screen and (min-width: 992px) and (max-width: 1229px)
-            max-width: 940px
-            // color: red
-
-        @media screen and (min-width: 768px) and (max-width: 991px)
-            max-width: 710px
             
-
-        @media screen /*! and (min-width: 576px)*/ and (max-width: 768px)
+        @media screen and (max-width: 768px)
             max-width: 520px
             grid-template-columns: 1fr
             grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr
-
-        @media screen and (max-width: 575px)
-            box-sizing: border-box
-            padding: 0px 30px
 
 .section-one-feature
     height: 390px
@@ -261,7 +256,7 @@
         grid-template-columns: 1fr 1fr 1fr
         grid-template-rows: 1fr 1fr
         margin: 100px auto
-        border: 1px solid blue
+        // border: 1px solid blue
 
         .benefit
             padding: 60px
